# rcds

./: .coveragerc  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: Makefile  challenge.rst  conf.py  config-samples.rst  index.rst  project.rst  quickstart.rst
docs/api/: challenge.rst  project.rst
docs/backends/: index.rst
docs/backends/k8s/: cluster-role.yaml  index.rst
docs/backends/rctf/: index.rst
example/: rcds.yaml
example/pwn/example/: challenge.yaml
example/web/with-database/: challenge.yaml
example/web/with-database/chall/: Dockerfile  package-lock.json  package.json
rcds/: __init__.py
rcds/backend/: backend.py
rcds/backends/k8s/: backend.py  jinja.py  manifests.py  options.schema.yaml
rcds/backends/k8s/templates/: deployment.yaml  ingress.yaml  service.yaml
rcds/backends/rctf/: backend.py  options.schema.yaml  rctf.py
rcds/challenge/: challenge.py  challenge.schema.yaml  config.py  docker.py
rcds/cli/: deploy.py
rcds/project/: assets.py  config.py  project.py  rcds.schema.yaml
rcds/util/: __init__.py  find.py  load.py
tests/challenge/: test_challenge.py  test_config.py  test_docker.py
tests/challenge/test_challenge/bad#dir/: challenge.yml
tests/challenge/test_challenge/id_override/: challenge.yml
tests/challenge/test_challenge/json/: challenge.json
tests/challenge/test_challenge/render-description/: challenge.yml
tests/challenge/test_challenge/shortcuts-http/: challenge.yaml
tests/challenge/test_challenge/shortcuts-tcp/: challenge.yaml
tests/challenge/test_challenge/static-assets/: challenge.yml  file2.txt
tests/challenge/test_config/default-category/chall/: challenge.yml
tests/challenge/test_config/defaults/1/: challenge.yml
tests/challenge/test_config/defaults/2/: challenge.yml
tests/challenge/test_config/flag-format/invalid/: challenge.yml
tests/challenge/test_config/flag-format/valid/: challenge.yml
tests/challenge/test_config/nonexistent-provide-file/: challenge.yml
tests/challenge/test_config/nonexistent_target_container/: challenge.yml
tests/challenge/test_config/schema-fail/: challenge.yml
tests/challenge/test_config/valid/: challenge.yml  flag.txt
tests/challenge/test_config/warn_multiline_flag/: challenge.yml  flag.txt
tests/challenge/test_docker/contexts/complex_dockerignore/: .dockerignore
tests/challenge/test_docker/project/: rcds.yml
tests/challenge/test_docker/project/chall/: challenge.yml
tests/challenge/test_docker/project/chall2/: challenge.yml
tests/challenges/: test_challenge.py  test_config.py  test_docker.py
tests/challenges/test_challenge/nonexistent/: .dir
tests/challenges/test_config/expose_no_containers/: challenge.yml
tests/challenges/test_config/nonexistent_flag_file/: challenge.yml
tests/challenges/test_config/nonexistent_target_port/: challenge.yml
tests/challenges/test_config/valid/: challenge.yml
tests/challenges/test_docker/project/: rcds.yml
tests/challenges/test_docker/project/chall/: challenge.yml
tests/project/: test_assets.py
tests/util/: test_deep_merge.py
