[tool.poetry]
name = "rcds"
version = "0.1.3"
description = "An automated CTF challenge deployment tool"
readme = "README.rst"
authors = ["redpwn <contact@redpwn.net>"]
homepage = "https://rcds.redpwn.net"
repository = "https://github.com/redpwn/rCDS"
license = "BSD-3-Clause"
packages = [
    { include = "rcds" },
]

[tool.poetry.scripts]
rcds = "rcds.cli:cli"

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.3.1"
pathspec = "^0.8.0"
docker = "^4.2.1"
jsonschema = "^3.2.0"
dataclasses = { version = "^0.7", python = "~3.6" }
Jinja2 = "^2.11.2"
kubernetes = "^11.0.0"
requests = "^2.23.0"
requests-toolbelt = "^0.9.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pre-commit = { version = "^2.5.1", python = "^3.6.1" }
black = "^19.10b0"
pytest = "^5.4.3"
coverage = "^5.1"
mypy = "^0.782"
flake8 = "^3.8.3"
flake8-bugbear = "^20.1.4"
pytest-datadir = "^1.3.1"
sphinx = "^3.1.1"
sphinx_rtd_theme = "^0.5.0"
isort = "^4.3.21"

[tool.isort]
line_length = 88
multi_line_output = 3 # conform to Black's style
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
